# cpp-modernizer

./: .cursorrules  .env.example  .gemini_cache.json  .gitignore  .llm_cache.json  .local_llm_cache.json  README.md  cli.py  modernization_report.json  modernization_report.txt  pyproject.toml  requirements.txt  test.cpp  test_modernized.cpp  test_ollama.py  test_system.py  vercel.json
agents/: __init__.py  function_modernizer.py  workflow.py
agents/workflow/: metrics.py
agents/workflow/infra/: __init__.py  model_provider.py
agents/workflow/nodes/: analyzer.py  fixer.py  modernizer.py  planner.py  semantic_guard.py
api/: index.py
core/: __init__.py  ast_modernizer.py  config.py  differential_tester.py  gemini_bridge.py  graph.py  inspect_parser.py  llm_client.py  llm_shared.py  local_ollama_bridge.py  logger.py  openai_bridge.py  openrouter_bridge.py  parser.py  rag.py  retry_policy.py  rule_modernizer.py  similarity.py  usage_tracker.py
plugins/: base.py  loader.py
plugins/rules/: null_to_nullptr.py  typedef_to_using.py
tests/: __init__.py  test_bridges.py  test_parser.py  test_plugins.py  test_workflow.py
tests/data/: test.cpp  test_modernized.cpp
tests/data/multi_file/: app_main.cpp  user.h  user.impl.cpp
tools/: mcp_server.py
web/: package-lock.json
web/app/: ModernizerDashboard.tsx  globals.css  layout.tsx  modernizer.module.css  page.tsx
