[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-gapped-codebase-modernization-engine"
version = "0.1.0"
description = "A tool for modernizing codebases in air-gapped environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "langgraph",
    "pydantic",
    "requests",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "openai",
]



[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
modernization-engine = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*"]
exclude = ["tests*", "scripts*", "outputs*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Windows"
venvPath = "."
venv = ".venv"
extraPaths = ["."]
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingModuleSource = false
reportGeneralTypeIssues = false
reportAttributeAccessIssue = false
reportOperatorIssue = false
reportIndexIssue = false
useLibraryCodeForTypes = true